Refactor product state management and enhance authorization
- Removed unused imports and refactored code in UserManagement and TransactionConfiguration.
- Introduced ProductStateMachineConfiguration for managing product lifecycle states (DRAFT, PUBLISHED, ARCHIVED) with corresponding actions and guards.
- Updated TransactionConfiguration to utilize SecurityUtils for fetching current user login.
- Replaced direct references to Node and Product with shared types in various classes.
- Enhanced ProductController to include ActorService for managing product creators and updaters.
- Updated GraphQL schema to support new UpdateProductInput for product updates.
- Modified product-related tests to accommodate changes in Product structure and authorization logic.
- Improved Docker Compose configuration for better service management and added environment variables for Keto authorization.
- Updated integration tests to reflect changes in authentication and product management logic.